@startuml


package "modele" #EEEEEE{

class Utilisateur{
  - pseudo : String 
  - mdp : String
  - admin : bool

  + int getId()
  + boolean isAdmin()
  + String getPseudo()

  # boolean ajouterAccesReseau()
  # boolean suppraccesReseau()
  # boolean ajouterReseauPossede()
  # boolean ajouterLogPossede()
}

class ReseauCache{
  - nom : String

  + int getId()
  + String getNom()
  + boolean ajouterAccesUtilisateur()
  + boolean supprAccesUtilisateur()
  + boolean setProprietaire()
  # boolean addCache()
}

class Cache{
  - numero : int
  - descriptionTextuelle : String
  - descriptionTechnique : String 
  - rubriqueLibre : String
  - type : TypeCache
  - statut : StatutCache

  + List<Log> getLogs()
  + String getDescriptionTextuelle()
  + String getDescriptionTechnique
  + String getInformationsGeolocalisation()
  + String getRubriqueLibre()
  + int getNumero()
  + boolean setStatutCache()
  + boolean addTypeCache() 
  + boolean setReseau() 
  + boolean ajouterLog() 

}

class TypeCache{
  - texte : String

  + boolean addCacheToList()
  + List<Cache> getCaches()
}

class StatutCache{
  - texte : String

  + boolean addCacheToList()
  + List<Cache> getCaches()
}


class Log{
  - id : int
  - commentaire : String
  - trouver : bool
  - note : int
  - date : DateTime
  
  + int getId()
  + boolean isTrouver()
  + Date getDate()
  + int getNote()
  + String getCommentaire()
  + Cache getEnregistrer()
  + boolean setProprietaire()
  + boolean setCache()

}

Cache::numero "0..*" -- "1" TypeCache::id : caractérisé par
Cache::numero "0..*" -- "1" StatutCache::id : état

Utilisateur::reseaux "0..*" -- "0..*" ReseauCache : accède
Utilisateur::id "1" -- "0..*" ReseauCache::idProprietaire : possède
Utilisateur::id "1" -- "0..*" Log::id : possède

ReseauCache::listCaches "1" -- "0..*" Cache : appartient

Log "0..*" -- "1" Cache : enregister
}


package "requete" #EEEEEE{
class RequeteGeOOCache{
  - emFactory : EntityManagerFactory

  + EntityManager getEm()
  + int autoriserConnexionApp()
  + boolean creerUtilisateur()
  + List<Utilisateur> getListeUtilisateurs()
  + List<Utilisateur> getListeUtilisateursFromReseau()
  + Long getNbReseauUtilisateur()
  + List<ReseauCache> getReseauxUtilisateur() 
  + boolean creerReseau()
  + ReseauCache getReseauAvecProprietaireEtNom()
  + boolean checkAssociationReseauUtilisateurExist()
  + boolean ajouterAccesReseau()
  + boolean deleteAccesReseau()
  + List<ReseauCache> getReseauxAvecAccessUtilisateur()
  + Utilisateur getStatProprietaire()
  + int getStatNbCaches()
  + int getStatNbLogs()
  + int getStatNbTrouve()
  + int getStatNbPasTrouve()
  + float getStatPourcentageTrouve()
  + List<Log> getLogs()
  + List<Cache> getCachesByReseauCache()
  + Cache getDataCachesById()
  + boolean updateStatutCache()
  + boolean creerCache()
  + List<StatutCache> getStatutCache()
  + StatutCache getStatutCacheById()
  + List<TypeCache> getTypeCache()
  + boolean creerTypeCache()
}

}


@enduml